--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-2.48MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-14.07MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-12.69MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.29MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
-  - {name: 🇨🇳 中国-11.58MB/s(Youtube:不良林), server: 103.56.60.235, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.02MB/s(Youtube:不良林), server: vde1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vde1.0bad.com}}
-  - {name: 🇺🇸 美国-1.31MB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.99MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
-  - {name: 🇺🇸 美国-5.81MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-527.4KB/s(Youtube:不良林), server: jgwcc3.gaox.ml, port: 443, type: trojan, password: b291d129-ee55-4801-a9b8-b5316e5c37b7, sni: jgwcc3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-961.9KB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.99MB/s(Youtube:不良林), server: vde1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vde1.0bad.com}}
+  - {name: 🇨🇳 中国-9.61MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-3.30MB/s(Youtube:不良林), server: 213.183.53.208, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
+  - {name: 🇨🇳 台湾-12.00MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.69MB/s(Youtube:不良林), server: viibah6u.com, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: viibah6u.com}}
+  - {name: 🇺🇸 美国-3.88MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林), server: 213.183.53.208, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 🇷🇺 俄罗斯联邦-2.56MB/s(Youtube:不良林), server: 213.183.53.208, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇷🇺 俄罗斯联邦-306.0KB/s(Youtube:不良林), server: 213.183.53.177, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-527.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-961.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.56MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-306.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-527.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-961.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.56MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-306.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-527.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-961.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.56MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-306.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-12.00MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-527.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-961.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.56MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-306.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-527.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-961.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.56MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-306.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-527.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-961.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.56MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-306.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.69MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.29MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.81MB/s(Youtube:不良林)
-      - 🇺🇸 美国-527.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-961.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.61MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.30MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-12.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.69MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.88MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.56MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-306.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
