--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 台湾-12.10MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-500.0KB/s(Youtube:不良林), server: 161.35.69.20, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇰🇷 韩国-2.66MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-11.58MB/s(Youtube:不良林), server: 103.56.60.235, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 乌克兰-3.03MB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
-  - {name: 🇸🇬 新加坡-2.96MB/s(Youtube:不良林), server: w11.udpgw.com, port: 443, type: trojan, password: f64e69c0-e7b7-11ec-ab81-1239d0255272, sni: w11.udpgw.com, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-5.86MB/s(Youtube:不良林), server: w13.udpgw.com, port: 443, type: trojan, password: 16877c70-e7b8-11ec-99f2-1239d0255272, sni: w13.udpgw.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.01MB/s(Youtube:不良林), server: hkbgp1.jiantian.xyz, port: 14326, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: hkbgp1.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.23MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: 57229afb-d4e4-426e-bfdc-18fc1f3267fd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
-  - {name: 🇮🇳 印度-2.64MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.25MB/s(Youtube:不良林), server: 103.56.60.235, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.61MB/s(Youtube:不良林), server: 120.233.186.71, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-11.18MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.59MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.74MB/s(Youtube:不良林), server: 120.233.186.204, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.93MB/s(Youtube:不良林), server: 120.233.186.204, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-551.3KB/s(Youtube:不良林), server: 213.183.53.208, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇨🇦 加拿大-2.34MB/s(Youtube:不良林), server: 134.195.196.150, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-2.98MB/s(Youtube:不良林), server: 134.195.196.150, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-12.10MB/s(Youtube:不良林)
-      - 🇩🇪 德国-500.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.58MB/s(Youtube:不良林)
-      - 乌克兰-3.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.96MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-5.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.61MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.18MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-551.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 台湾-12.10MB/s(Youtube:不良林)
-      - 🇩🇪 德国-500.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.58MB/s(Youtube:不良林)
-      - 乌克兰-3.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.96MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-5.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.61MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.18MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-551.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-12.10MB/s(Youtube:不良林)
-      - 🇩🇪 德国-500.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.58MB/s(Youtube:不良林)
-      - 乌克兰-3.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.96MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-5.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.61MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.18MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-551.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-12.10MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.18MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 台湾-12.10MB/s(Youtube:不良林)
-      - 🇩🇪 德国-500.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.58MB/s(Youtube:不良林)
-      - 乌克兰-3.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.96MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-5.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.61MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.18MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-551.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-12.10MB/s(Youtube:不良林)
-      - 🇩🇪 德国-500.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.58MB/s(Youtube:不良林)
-      - 乌克兰-3.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.96MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-5.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.61MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.18MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-551.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-12.10MB/s(Youtube:不良林)
-      - 🇩🇪 德国-500.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.58MB/s(Youtube:不良林)
-      - 乌克兰-3.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.96MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-5.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.61MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.18MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-551.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-12.10MB/s(Youtube:不良林)
-      - 🇩🇪 德国-500.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.58MB/s(Youtube:不良林)
-      - 乌克兰-3.03MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.96MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-5.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.23MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.61MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-11.18MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-551.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.34MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
