--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-10.25MB/s(Youtube:不良林), server: 103.56.60.235, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.61MB/s(Youtube:不良林), server: 120.233.186.71, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-11.18MB/s(Youtube:不良林), server: 211.72.35.153, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.59MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-10.74MB/s(Youtube:不良林), server: 120.233.186.204, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.93MB/s(Youtube:不良林), server: 120.233.186.204, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-551.3KB/s(Youtube:不良林), server: 213.183.53.208, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
-  - {name: 🇨🇦 加拿大-2.34MB/s(Youtube:不良林), server: 134.195.196.150, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇦 加拿大-2.98MB/s(Youtube:不良林), server: 134.195.196.150, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇬🇧 英国-2.85MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1019.2KB/s(Youtube:不良林), server: hkbgp1.jiantian.xyz, port: 14326, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: hkbgp1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-159.9KB/s(Youtube:不良林), server: 161.35.69.20, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林), server: 213.183.53.208, port: 9061, type: ss, cipher: aes-256-cfb, password: 4R3hUfZ2FHhDmNcP}
+  - {name: 🇨🇳 中国-10.51MB/s(Youtube:不良林), server: 103.56.62.145, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-410.8KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-7.81MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.83MB/s(Youtube:不良林), server: 120.233.186.250, port: 3383, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.65MB/s(Youtube:不良林), server: 134.195.196.150, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-10.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.61MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.18MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-551.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1019.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-159.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-410.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-10.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.61MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.18MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-551.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1019.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-159.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-410.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-10.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.61MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.18MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-551.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1019.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-159.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-410.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-11.18MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-10.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.61MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.18MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-551.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1019.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-159.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-410.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-10.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.61MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.18MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-551.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1019.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-159.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-410.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-10.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.61MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.18MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-551.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1019.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-159.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-410.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-10.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.61MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-11.18MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.54MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.74MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.93MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-551.3KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.34MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.98MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1019.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-159.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-410.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.83MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.65MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
